--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.1",
     "@reduxjs/toolkit": "^1.8.3",
+    "axios": "^0.27.2",
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^8.0.2",
     "react": "^18.2.0",
