--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "electron-store": "^8.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.2"
+    "react-redux": "^8.0.2",
+    "react-router-dom": "6"
   }
 }
