chore: cleanup unused files, rename react and electron entry points

--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "dev": "rm -rf .webpack && electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
-    "publish": "electron-forge publish",
-    "lint": "eslint --ext .ts,.tsx ."
+    "publish": "electron-forge publish"
   },
   "keywords": [],
   "author": {
