--- a/package.json
+++ b/package.json
@@ -71,8 +71,10 @@
     "@electron-forge/maker-squirrel": "^6.0.0-beta.64",
     "@electron-forge/maker-zip": "^6.0.0-beta.64",
     "@electron-forge/plugin-webpack": "^6.0.0-beta.64",
+    "@types/ramda": "^0.28.15",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
     "@vercel/webpack-asset-relocator-loader": "^1.7.0",
@@ -94,11 +96,14 @@
     "@mui/material": "^5.9.1",
     "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
+    "dayjs": "^1.11.4",
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^8.0.2",
+    "ramda": "^0.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
-    "react-router-dom": "6"
+    "react-router-dom": "6",
+    "uuid": "^8.3.2"
   }
 }
