--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@types/uuid": "^8.3.4",
+    "@types/webpack-env": "^1.17.0",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
     "@vercel/webpack-asset-relocator-loader": "^1.7.0",
@@ -104,6 +105,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "6",
+    "redux-persist": "^6.0.0",
     "uuid": "^8.3.2"
   }
 }
