--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
               "entryPoints": [
                 {
                   "html": "./src/index.html",
-                  "js": "./src/renderer.ts",
+                  "js": "./src/renderer.tsx",
                   "name": "main_window",
                   "preload": {
                     "js": "./src/preload.ts"
