--- a/package.json
+++ b/package.json
@@ -101,5 +101,10 @@
     "react-router-dom": "6",
     "uuid": "^8.3.2",
     "zod": "^3.17.10"
+  },
+  "volta": {
+    "node": "16.16.0",
+    "yarn": "1.22.19",
+    "npm": "8.11.0"
   }
 }
