--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
     "@vercel/webpack-asset-relocator-loader": "^1.7.0",
+    "babel-plugin-macros": "^3.1.0",
     "css-loader": "^6.7.1",
     "electron": "19.0.8",
     "eslint": "^8.20.0",
@@ -100,6 +101,8 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "6",
+    "redux-saga": "^1.1.3",
+    "typed-redux-saga": "^1.5.0",
     "uuid": "^8.3.2",
     "zod": "^3.17.10"
   },
