--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "babel-plugin-macros": "^3.1.0",
     "css-loader": "^6.7.1",
     "electron": "19.0.8",
+    "electron-devtools-installer": "^3.2.0",
     "eslint": "^8.20.0",
     "eslint-plugin-import": "^2.26.0",
     "fork-ts-checker-webpack-plugin": "^7.2.13",
