--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "prettier": "^2.7.1",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.3.1",
+    "ts-node": "^10.9.1",
     "typescript": "~4.5.4"
   },
   "dependencies": {
@@ -103,6 +104,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "6",
     "redux-saga": "^1.1.3",
+    "ts-morph": "^15.1.0",
     "typed-redux-saga": "^1.5.0",
     "uuid": "^8.3.2",
     "zod": "^3.17.10"
