--- a/package.json
+++ b/package.json
@@ -95,9 +95,11 @@
     "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
     "chalk": "^5.0.1",
+    "chokidar": "^3.5.3",
     "dayjs": "^1.11.4",
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^8.0.2",
+    "module-from-string": "^3.2.0",
     "ramda": "^0.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
