--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "6",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "ts-morph": "^15.1.0",
     "typed-redux-saga": "^1.5.0",
