chore: install eslint and fix issues

--- a/package.json
+++ b/package.json
@@ -70,15 +70,19 @@
     "@types/react-dom": "^18.0.6",
     "@types/uuid": "^8.3.4",
     "@types/webpack-env": "^1.17.0",
-    "@typescript-eslint/eslint-plugin": "^5.30.7",
-    "@typescript-eslint/parser": "^5.30.7",
+    "@typescript-eslint/eslint-plugin": "^5.32.0",
+    "@typescript-eslint/parser": "^5.32.0",
     "@vercel/webpack-asset-relocator-loader": "^1.7.0",
     "babel-plugin-macros": "^3.1.0",
     "css-loader": "^6.7.1",
-    "electron": "19.0.8",
-    "electron-devtools-installer": "^3.2.0",
-    "eslint": "^8.20.0",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "fork-ts-checker-webpack-plugin": "^7.2.13",
     "node-loader": "^2.0.0",
     "prettier": "^2.7.1",
@@ -97,6 +101,8 @@
     "chalk": "^5.0.1",
     "chokidar": "^3.5.3",
     "dayjs": "^1.11.4",
+    "electron": "^20.0.1",
+    "electron-devtools-installer": "^3.2.0",
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^8.0.2",
     "module-from-string": "^3.2.0",
